update openapi.yaml for fps file support, regen libs
